--- a/site/pages/sponsorship.th.html
+++ b/site/pages/sponsorship.th.html
@@ -43,7 +43,8 @@ type: micro
                       </div>
                       <div class="sponsors-card-wrap__right">
                           <p>
-                            
+                          Microsoft <3 Python - we are thrilled to be part of Pycon Thailand this year! 
+			Find out how you can build and deploy your Python apps in the cloud and go further with AI and data science: aka.ms/MSlovePython  
                           </p>
                       </div>
            </div>
@@ -145,7 +146,7 @@ type: micro
                               </p>
                           </div>
                       </div>
-              <!-- <div class="sponsors-card-wrap">
+              <div class="sponsors-card-wrap">
                       <div class="sponsors-card-wrap__left">
                           <a class="sponsors-link--gold" href="https://www.trinityroots.co.th" target="_blank">
                               <div class="sponsors-card">
@@ -163,7 +164,22 @@ type: micro
                               ชั้นนำของโลก หากท่านสนใจในการบริการของเรา สามารถติดต่อเราได้ที่
                           </p>
                       </div>
-                  </div> -->
+                  </div>
+ 		<div class="sponsors-card-wrap">
+                <div class="sponsors-card-wrap__left">
+                    <a class="sponsors-link--gold" href="https://aws.amazon.com/" target="_blank">
+                        <div class="sponsors-card">
+                            <img alt="" src="/logos-2009/gold-aws.png" />
+                        </div>
+                    </a>
+                </div>
+                <div class="sponsors-card-wrap__right">
+                    <p>
+                        Amazon Web Services (AWS) เป็นแพลตฟอร์มระบบคลาวด์ที่ครอบคลุมและใช้งานกันมากที่สุด โดยมีบริการอันโดดเด่นเต็มรูปแบบกว่า 165 บริการจากศูนย์ข้อมูลไปทั่วโลก 
+			ลูกค้ากว่าหลายล้านคน ทั้งสตาร์ทอัพที่เติบโตเร็วที่สุด องค์กรที่ใหญ่ที่สุด และหน่วยงานราชการชั้นนำ ต่างวางใจให้ AWS เพิ่มประสิทธิภาพให้โครงสร้างพื้นฐาน เพิ่มความคล่องตัว และลดค่าใช้จ่าย
+                    </p>
+                </div>
+            </div>  
           </div>
       </section>
       <section class="sponsors-section">
@@ -261,7 +277,7 @@ type: micro
                          เราคือบริษัทที่รับออกแบบและพัฒนาซอฟแวร์รวมถึงเราคือชุมชนคนรักเทคโนโลยี
                       </div>
                     </div>
-              <!--<div class="sponsors-card-wrap">
+              <div class="sponsors-card-wrap">
                   <div class="sponsors-card-wrap__left">
                     <a class="sponsors-link--silver" href=" http://www.swpark.or.th/index.php" target="_blank">
                       <div class="sponsors-card">
@@ -271,11 +287,11 @@ type: micro
                   </div>
                   <div class="sponsors-card-wrap__right">
                     <p>
-                      
+                     Software Park Thailand PYCON THAILAND 2019 Official Silver Sponsored  
                     </p>
                   </div>
-                </div>-->
-              <!--<div class="sponsors-card-wrap">
+                </div>
+            <div class="sponsors-card-wrap">
                   <div class="sponsors-card-wrap__left">
                     <a class="sponsors-link--silver" href=" https://www.prtr.com/" target="_blank">
                       <div class="sponsors-card">
@@ -289,8 +305,8 @@ type: micro
                     At PRTR, we have been a part of our customers’ success for 25 years as their total HR solutions partner.  
                     </p>
                   </div>
-                </div>-->
-                 <!--<div class="sponsors-card-wrap">
+		</div>
+                 <div class="sponsors-card-wrap">
                   <div class="sponsors-card-wrap__left">
                     <a class="sponsors-link--silver" href="http://www.jetbrains.com" target="_blank">
                       <div class="sponsors-card">
@@ -303,7 +319,21 @@ type: micro
                        The Drive to Develop. For over 19 years we have strived to make the strongest, most effective developer tools on earth.
                     </p>
                   </div>
-                </div>-->
+                </div>
+	<div class="sponsors-card-wrap">
+            <div class="sponsors-card-wrap__left">
+              <a class="sponsors-link--silver" href="https://cloud.google.com/" target="_blank">
+                <div class="sponsors-card">
+                  <img alt="" src="/logos-2009/silver-googlecloud.png" />
+                </div>
+              </a>
+            </div>
+            <div class="sponsors-card-wrap__right">
+              <p>
+                 Google Cloud Platform enables developers to build, test and deploy applications on Google's highly-scalable and reliable infrastructure. Computing, storage and application services for your web, mobile and backend solutions. Visit https://cloud.google.com/ and get started today.
+              </p>
+            </div>
+          </div>
           </div>
         </div>
       </section>
@@ -450,7 +480,10 @@ type: micro
               </div>
               <div class="sponsors-card-wrap__right">
                   <p>
-                      <!-- company description -->
+                   “Women Who Code” คือองค์กรที่ไม่แสวงผลกำไร จัดตั้งขึ้นเมื่อปี 2011 มีวัตถุประสงค์เพื่อมุ่งเน้นการสร้างอาชีพในสายเทคโนโลยีให้ผู้หญิง 
+		   โดยการมอบประสบการณ์ต่างๆ ที่มีประโยชน์แก่สมาชิกและผู้สนับสนุน ผ่านการจัดกิจกรรมเพื่อเพิ่มพูนทักษะในการเป็นผู้เชี่ยวชาญด้านเทคนิค 
+		   การสนับสนุนด้านอาชีพโดยให้ความรู้แก่องค์กรต่างๆ และการสร้างระบบเครือข่ายของสมาชิก เพื่อส่งผ่านและเชิดชูเรื่องราวความสำเร็จของผู้หญิงในสายอาชีพเทคโนโลยี 
+		   รวมถึงการพัฒนาต้นแบบของผู้หญิงในอุตสาหกรรมเทคโนโลยี และให้การสนับสนุนกลุ่มคนในสายงานเดียวกัน
                   </p>
               </div>
           </div>
