put venue layout into menu

--- a/site/pages/schedule.html
+++ b/site/pages/schedule.html
@@ -1,7 +1,8 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="date" content="2018-05-23 22:28" />
+<meta name="date" content="2019-06-10 22:28" />
 <meta name="summary" content="Conference Schedule" />
+<meta name="slug" content="schedule" />
 
 <style>
 .grid-container {
