--- a/site/pages/schedule.html
+++ b/site/pages/schedule.html
@@ -89,7 +89,7 @@ a {
   display: none;
 }
 </style>
-{{% schedule grid file="../talks2019.yaml" talks_page="talks" speakers_page="speakers" %}}
+{{% schedule mode="schedule" file="../talks2019.yaml" talks_page="talks" speakers_page="speakers" %}}
 <h1>Schedule</h1><h2>Tracks</h2><div class="schedule-item schedule-item-1">Track 1: Auditorium</div><div class="schedule-item schedule-item-2">Track 2: Forum</div><div class="schedule-item schedule-item-3">Track 3: Cubiculum</div><div class="schedule-item schedule-item-4">Track 4: Aquarium</div><h2>Saturday 15th June</h2> <div class="grid-container"><div class="timeflex" style="grid-row-start: 1; grid-row-end: 1; grid-column-start: 1; grid-column-end: 3;"> <div class="timetext"><b>07:30</b></div> <div class="schedule-item-container" style="flex-grow:1;">		<div class="schedule-item schedule-item-5" style="order: 4;" onclick="var hid='hidden-field-1-5'; if (!$('#'+hid).hasClass('active')) $('#'+hid).fadeIn(250),$('#'+hid).addClass('active'); else $('#'+hid).fadeOut(250),$('#'+hid).removeClass('active');">
       <div><b>Breakfast @ Starbucks with Women who Code and Pycon Thailand</b></div>
       <div>Women Who Code</div>
