put schedule on frontpage

--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -127,7 +127,7 @@
                 <h2 class="countdown-timer" id="countdown-timer">
                 </h2>
                 <span class="btn-primary btn-lg get-ticket-btn">
-                    {{% doc %}}ขอรับตั๋ว <buy-tickets>{{% /doc %}}
+                    {{% doc %}}ตารางเวลาการพูด <schedule>{{% /doc %}}
                 </span>
         </div>
     </div>
@@ -235,6 +235,7 @@
 
 
         <!--Schedule-->
+        <!--
         <section class="my-8 text-center">
             <h2 class="countdown-title red-prepostline font-bold">
               SCHEDULE
@@ -321,9 +322,12 @@
               </div>
             </div>
           </section>
+        -->
       </div>
   </div>
 </div>
+
+<!--
 <section id="submission" class="section sponsor-section fp-auto-height">
   <div class="container">
     <div class="row">
@@ -340,7 +344,7 @@
     </div>
   </div>
 </section>
-
+-->
 <section id="sponsors" class="section sponsor-section fp-auto-height">
   <div class="container">
     <div class="row">
