--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -116,8 +116,10 @@
           </div>
         </div>
         <h2 class="countdown-timer" id="countdown-timer"></h2>
-        <a href="https://th.pycon.org/en/buy-tickets/" class="btn-primary btn-lg get-ticket-btn">Buy tickets</a>
-      </div>
+            <span class="btn-primary btn-lg get-ticket-btn">
+                    {{% doc %}}Schedule <schedule>{{% /doc %}}
+            </span>
+
     </div>
   </div>
   
@@ -229,7 +231,7 @@
             </p>
           </article>
         </section>
-  
+<!--
         <section class="my-8 text-center">
             <h2 class="countdown-title red-prepostline font-bold">
               SCHEDULE
@@ -242,8 +244,8 @@
               <div class="schedule-right">
                 <h2 class="countdown-title italic mt-0">Day 1.0 - Saturday 15/06/19</h2>
                 <p>
-                  We start off the day with morning coffee provided to register your attendance, 
-                  meetup and get to know what is install for you. Presentation will kick off with a brief intro from our host, 
+                  We start off the day with morning coffee provided to register your attendance,
+                  meetup and get to know what is install for you. Presentation will kick off with a brief intro from our host,
                   our team and one of our keynote speakers, follow up with 3 tracks of talks and workshops for you to choose.
                   Lunch provided around noon in a light and relaxed mood.
                 </p>
@@ -257,9 +259,9 @@
               <div class="schedule-right">
                 <h2 class="countdown-title italic mt-0">Day 1.1 - Afternoon session</h2>
                 <p>
-                  Continue with a marathon of various exciting Python related topics to indulge in. 
-                  Choose the topic that you prefer. Take advantage of this great networking event to know more people, 
-                  gain more knowledge, and widen your horizon. Conference closes with some lightning talk and another 
+                  Continue with a marathon of various exciting Python related topics to indulge in.
+                  Choose the topic that you prefer. Take advantage of this great networking event to know more people,
+                  gain more knowledge, and widen your horizon. Conference closes with some lightning talk and another
                   keynote speaker in the evening around 5-6pm.
                 </p>
               </div>
@@ -272,9 +274,9 @@
               <div class="schedule-right">
                 <h2 class="countdown-title italic mt-0">Day 1.2 - Epic party</h2>
                 <p>
-                  Not to be missed! Great opportunity to wind down after a day full of inspiring presentations and 
-                  knowledge exchange. Get together in a relaxed and upbeat environment with drinks and food provided as 
-                  you continue to interact, exchange and extend your discussions with speakers, sponsors, and other attendees.  
+                  Not to be missed! Great opportunity to wind down after a day full of inspiring presentations and
+                  knowledge exchange. Get together in a relaxed and upbeat environment with drinks and food provided as
+                  you continue to interact, exchange and extend your discussions with speakers, sponsors, and other attendees.
                 </p>
               </div>
             </div>
@@ -286,9 +288,9 @@
               <div class="schedule-right">
                 <h2 class="countdown-title italic mt-0">Day 2.0 - Sunday 16/06/19</h2>
                 <p>
-                  Start off the day light and easy with a cup of morning coffee with compliments from us to boost your 
-                  energy. Day 2 kicks off with another keynote speaker in a state-of-the-art venue packed with motivated 
-                  talks and workshops delivered by a carefully selected line up of local and international speakers. 
+                  Start off the day light and easy with a cup of morning coffee with compliments from us to boost your
+                  energy. Day 2 kicks off with another keynote speaker in a state-of-the-art venue packed with motivated
+                  talks and workshops delivered by a carefully selected line up of local and international speakers.
                   Take a break and have a lunch reboost.
                 </p>
               </div>
@@ -297,13 +299,13 @@
               <div class="schedule-left">
                 <div class="circle"></div>
                 <div class="line"></div>
-              </div> 
+              </div>
               <div class="schedule-right">
                   <h2 class="countdown-title italic mt-0">Day 2.1 - Afternoon</h2>
                   <p>
-                  Don’t pass on the chance to learn or improve your knowledge on a subject that could provide you with 
-                  a competitive edge. Take advantage of an extended and diversified list of talks and workshops. 
-                  Access to these programs exclusively reserved for you. 
+                  Don’t pass on the chance to learn or improve your knowledge on a subject that could provide you with
+                  a competitive edge. Take advantage of an extended and diversified list of talks and workshops.
+                  Access to these programs exclusively reserved for you.
                   </p>
               </div>
             </div>
@@ -311,16 +313,16 @@
               <div class="schedule-left">
                 <div class="circle"></div>
                 <div class="line"></div>
-              </div> 
+              </div>
               <div class="schedule-right">
                   <h2 class="countdown-title italic mt-0">Day 2.2 - Closing</h2>
                   <p>
-                  We wrap off the 2 day conference with our final keynote speaker, We gather our sponsors, partners, 
+                  We wrap off the 2 day conference with our final keynote speaker, We gather our sponsors, partners,
                   team and you as we  advance our community effort to the next level for Pycon in Thailand.
                   </p>
               </div>
             </div>
-          </section>
+          </section> -->
         </div>
         </div>
       </div>
