try to fix meta in schedule

--- a/site/pages/schedule.html
+++ b/site/pages/schedule.html
@@ -1,9 +1,12 @@
 
-
+<html>
+<head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="date" content="2019-06-10 22:28" />
 <meta name="summary" content="Conference Schedule" />
+</head>
 
+<body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
 
 <style>
@@ -91,3 +94,5 @@ a {
 </style>
 
 {{% schedule mode="schedule" file="../talks2019.yaml" talks_page="talks" speakers_page="speakers" %}}
+</body>
+</html>
