--- a/site/pages/talks.html
+++ b/site/pages/talks.html
@@ -9,6 +9,6 @@
 <body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
 
-{{% schedule mode="talk" file="../talks2019.yaml" talks_page="talks" speakers_page="speakers" %}}
+{{% schedule mode="talks" file="../talks2019.yaml" talks_page="talks" speakers_page="speakers" %}}
 </body>
 </html>
