--- a/site/pages/sponsorship.th.html
+++ b/site/pages/sponsorship.th.html
@@ -504,6 +504,36 @@ type: micro
           </div>
           </div>
       </section>
+<div class="sponsors-card-wrap">
+        <div class="sponsors-card-wrap__left">
+            <a class="sponsors-link--partner" href="http://www.tha6.com/" target="_blank">
+                <div class="sponsors-card">
+                    <img alt="" src="/logos-2009/Partner-THA-logo-with-background.png" />
+                </div>
+            </a>
+        </div>
+        <div class="sponsors-card-wrap__right">
+            <p>
+           
+            </p>
+        </div>
+      </div>
+  <div class="sponsors-card-wrap">
+        <div class="sponsors-card-wrap__left">
+            <a class="sponsors-link--partner" href="http://www.techladies.co/" target="_blank">
+                <div class="sponsors-card">
+                    <img alt="" src="/logos-2009/partner-techladies.png" />
+                </div>
+            </a>
+        </div>
+        <div class="sponsors-card-wrap__right">
+            <p>
+           TechLadies is a community-led initiative for women to connect, learn, and advance in the industry. We believe the technology is for everyone, and we aim to increase women’s participation and create opportunities for women in the tech industry. Since our launch in 2016, we are now reaching out to thousands of women in Asia, trained hundreds of women programming skills, and helped tens of women get jobs in the industry.
+            </p>
+        </div>
+      </div>                                            
+    </div>
+</section>
 
 <h3>ผู้สนับสนุน</h3>
 
