--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -36,34 +36,36 @@
     <div class="row">
       <img alt="upside down city" class="upside-down-city" src="/upside-down-city2.png" />
   
-      <div class="features">
-        <div class="item">
-          <img alt="" src="/airplane-grad.png" />
-          <h3>4 Keynotes</h3>
-          <p>
-          </p>
+      <a href="/schedule">
+        <div class="features">
+          <div class="item">
+            <img alt="" src="/airplane-grad.png" />
+            <h3>4 Keynotes</h3>
+            <p>
+            </p>
+          </div>
+          <div class="item">
+            <img alt="" src="/talks-grad.png" />
+            <h3>+40 talks</h3>
+            <p>
+            </p>
+          </div>
+          <div class="item">
+            <img alt="" src="/python.png" />
+            <h3>+300 Pythonistas</h3>
+            <p>
+
+            </p>
+          </div>
+          <div class="item">
+            <img alt="" src="/party-grad.png" />
+            <h3>1 great party</h3>
+            <p>
+
+            </p>
+          </div>
         </div>
-        <div class="item">
-          <img alt="" src="/talks-grad.png" />
-          <h3>+40 talks</h3>
-          <p>
-          </p>
-        </div>
-        <div class="item">
-          <img alt="" src="/python.png" />
-          <h3>+300 Pythonistas</h3>
-          <p>
-            
-          </p>
-        </div>
-        <div class="item">
-          <img alt="" src="/party-grad.png" />
-          <h3>1 great party</h3>
-          <p>
-            
-          </p>
-        </div>
-      </div>
+      </a>
   
       <div class="news mx-auto -mt-6 max-w-md text-center">
         <h2 class="news-title red-followline italic mt-0">News</h2>
