--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -43,34 +43,36 @@
             src="/upside-down-city2.png"
         />
 
-   <div class="features">
-      <div class="item">
-        <img alt="" src="/airplane-grad.png" />
-        <h3>4 การนำเสนอ</h3>
-        <p>
-        </p>
-      </div>
-      <div class="item">
-        <img alt="" src="/talks-grad.png" />
-        <h3>+40  เรื่อง</h3>
-        <p>
-        </p>
-      </div>
-      <div class="item">
-        <img alt="" src="/python.png" />
-        <h3>กับชาวไพธอนมากกว่า +300 คน</h3>
-        <p>
-          
-        </p>
-      </div>
-      <div class="item">
-        <img alt="" src="/party-grad.png" />
-        <h3>1  ปาร์ตี้สุดเจ๋ง</h3>
-        <p>
-          
-        </p>
-      </div>
-    </div>
+   <a href="/schedule">
+       <div class="features">
+          <div class="item">
+            <img alt="" src="/airplane-grad.png" />
+            <h3>4 การนำเสนอ</h3>
+            <p>
+            </p>
+          </div>
+          <div class="item">
+            <img alt="" src="/talks-grad.png" />
+            <h3>+40  เรื่อง</h3>
+            <p>
+            </p>
+          </div>
+          <div class="item">
+            <img alt="" src="/python.png" />
+            <h3>กับชาวไพธอนมากกว่า +300 คน</h3>
+            <p>
+
+            </p>
+          </div>
+          <div class="item">
+            <img alt="" src="/party-grad.png" />
+            <h3>1  ปาร์ตี้สุดเจ๋ง</h3>
+            <p>
+
+            </p>
+          </div>
+        </div>
+    </a>
         <div class="news mx-auto -mt-6 max-w-md text-center">
             <h2 class="news-title red-followline italic mt-0">แจ้งข่าว</h2>
             <div class="schedule list-reset text-left text-lg">
